add deploy button

--- a/index.html
+++ b/index.html
@@ -28,10 +28,32 @@
     .enabled {
       color: green;
     }
+
+    .header {
+      display: flex;
+      gap: 10px;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .api {
+      margin: 10px 0;
+      text-align: center;
+    }
   </style>
 </head>
 
 <body>
+  <div class="header">
+    <span>俺也部署一个:</span>
+    <a
+      href="https://vercel.com/new/git/external?repository-url=https%3A%2F%2Fgithub.com%2FJ3n5en%2Fazure-subscription-checker"><img
+        src="https://vercel.com/button" alt="俺也部署一个" /></a>
+  </div>
+  <div class="api">
+    <span>api:</span>
+    <span x-data="{prefix:location.href}" x-text="prefix+'/api/subscriptions?email=邮箱&password=密码'"></span>
+  </div>
 
   <div x-data="accouts()">
     <textarea x-bind:disabled="checking" placeholder="一行一个，邮箱和密码逗号(,)分开，如：
